Use standard AM_LANGINFO_CODESET macro instead of assume CODESET is available if nl_langinfo is. Thanks to Adrian Bunk <bunk@fs.tum.de> for the patch. Bug #160180 r=cls